--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Układ divów</title>
   </head>
   <body>
-    <div class="styl1 div1"></div>
-    <div class="styl1 div2"></div>
-    <div class="styl1 div3"></div>
-    <div class="styl2"></div>
+    <div class="small-box dark-green"></div>
+    <div class="small-box dark-olive"></div>
+    <div class="small-box dark-grey"></div>
+    <div class="big-box"></div>
   </body>
 </html>
